Fix GTK scale highlight color contrast when in a hovered menuitem for the Xfce pulseaudio and power manager plugins (gtk 3)

--- a/src/gtk-3.0/gtk-dark-azul.css
+++ b/src/gtk-3.0/gtk-dark-azul.css
@@ -9060,6 +9060,10 @@ window.thunar notebook header.top tab.reorderable-page > box > label {
   min-height: 0;
 }
 
+#pulseaudio-button menuitem:hover scale highlight, #xfce4-power-manager-plugin menuitem:hover scale highlight {
+  background-color: #ffffff;
+}
+
 /**********************
  * Elementary Desktop *
  **********************/
