--- a/src/gtk-3.0/gtk-light-aliz.css
+++ b/src/gtk-3.0/gtk-light-aliz.css
@@ -9062,6 +9062,10 @@ window.thunar notebook header.top tab.reorderable-page > box > label {
   min-height: 0;
 }
 
+#pulseaudio-button menuitem:hover scale highlight, #xfce4-power-manager-plugin menuitem:hover scale highlight {
+  background-color: #ffffff;
+}
+
 /**********************
  * Elementary Desktop *
  **********************/
